--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,13 @@
     <a href="/new_meeting">Uusi tapaaminen</a>
   </p>
 
+  <h2>Tapaamiset</h2>
+
+  <ul>
+    {% for meeting in meetings %}
+    <li><a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a></li>
+    {% endfor %}
+  </ul>
 </body>
 
 </html>
