--- a/templates/show_meeting.html
+++ b/templates/show_meeting.html
@@ -7,6 +7,11 @@
 
 <body>
   <h1>{{ meeting.topic }}</h1>   
+  {% if session.user_id == meeting.user_id %}
+  <p>
+    <a href="/edit_meeting/{{ meeting.id }}">Muokkaa</a>
+  </p>
+  {% endif %}
   <p>
     {{ meeting.description }}
   </p>
