Add remove meeting feature

--- a/templates/show_meeting.html
+++ b/templates/show_meeting.html
@@ -10,6 +10,7 @@
   {% if session.user_id == meeting.user_id %}
   <p>
     <a href="/edit_meeting/{{ meeting.id }}">Muokkaa</a>
+    <a href="/remove_meeting/{{ meeting.id }}">Poista</a>
   </p>
   {% endif %}
   <p>
