Add find meeting feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Kirjautuminen</title>
+  <title>Käsityökerho</title>
 </head>
 
 <body>
@@ -22,6 +22,7 @@
 
   <p>
     <a href="/new_meeting">Uusi tapaaminen</a>
+    <a href="/find_meeting">Etsi tapaaminen</a>
   </p>
 
   <h2>Tapaamiset</h2>
