Check invalid form inputs

--- a/templates/new_meeting.html
+++ b/templates/new_meeting.html
@@ -10,23 +10,23 @@
   <form action="/create_meeting" method="post">
     <p>
       Aihe: <br />
-      <input type="text" name="topic" />
+      <input type="text" name="topic" maxlength="50" required />
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="8" cols="60"></textarea>
+      <textarea name="description" rows="8" cols="60" maxlength="1000" required></textarea>
     </p>
     <p>
       Päivämäärä: <br />
-      <input type="date" name="date" />
+      <input type="date" name="date" required />
     </p>
     <p>
       Aloitusajankohta: <br />
-      <input type="time" name="start_time" />
+      <input type="time" name="start_time" required />
     </p>
     <p>
       Lopetusajankohta: <br />
-      <input type="time" name="end_time" />
+      <input type="time" name="end_time" required />
     </p>
 
     <input type="submit" value="Järjestä tapaaminen" />
