--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -10,23 +10,23 @@
   <form action="/update_meeting" method="post">
     <p>
       Aihe: <br />
-      <input type="text" name="topic" value="{{ meeting.topic }}"/>
+      <input type="text" name="topic" value="{{ meeting.topic }}" maxlenght="50" required />
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="8" cols="60">{{ meeting.description }}</textarea>
+      <textarea name="description" rows="8" cols="60" maxlenght="1000" required>{{ meeting.description }}</textarea>
     </p>
     <p>
       Päivämäärä: <br />
-      <input type="date" name="date" value="{{ meeting.date }}" />
+      <input type="date" name="date" value="{{ meeting.date }}" required />
     </p>
     <p>
       Aloitusajankohta: <br />
-      <input type="time" name="start_time" value="{{ meeting.start_time }}" />
+      <input type="time" name="start_time" value="{{ meeting.start_time }}" required />
     </p>
     <p>
       Lopetusajankohta: <br />
-      <input type="time" name="end_time" value="{{ meeting.end_time }}" />
+      <input type="time" name="end_time" value="{{ meeting.end_time }}" required />
     </p>
     <input type="hidden" name="meeting_id" value="{{ meeting.id }}" />
     <input type="submit" value="Päivitä tietoja" />
