Add classification to meetings

--- a/templates/new_meeting.html
+++ b/templates/new_meeting.html
@@ -28,7 +28,14 @@
       Lopetusajankohta: <br />
       <input type="time" name="end_time" required />
     </p>
-
+    <p>
+      Onko tapaaminen ohjattu vai vapaamuotoinen? <br />
+      <select name="guidance">
+        <option value="">(valitse)</option>
+        <option value="ohjattu">ohjattu</option>
+        <option value="vapaamuotoinen">vapaamuotoinen</option>
+      </select>
+    </p>
     <input type="submit" value="Järjestä tapaaminen" />
   </form>
 </body>
