Store classes in database

--- a/templates/new_meeting.html
+++ b/templates/new_meeting.html
@@ -28,14 +28,17 @@
       Lopetusajankohta: <br />
       <input type="time" name="end_time" required />
     </p>
+    {% for class in classes %}
     <p>
-      Onko tapaaminen ohjattu vai vapaamuotoinen? <br />
-      <select name="guidance">
+      {{ class }}: <br />
+      <select name="classes">
         <option value="">(valitse)</option>
-        <option value="ohjattu">ohjattu</option>
-        <option value="vapaamuotoinen">vapaamuotoinen</option>
+      {% for option in classes[class] %}
+        <option value="{{ class }}:{{ option }}">{{ option }}</option>
+      {% endfor %}
       </select>
     </p>
+    {% endfor %}
     <input type="submit" value="Järjestä tapaaminen" />
   </form>
 </body>
