--- a/templates/show_meeting.html
+++ b/templates/show_meeting.html
@@ -24,9 +24,11 @@
   </p>
   <p>
     <ul>
+    {% if classes %}
       {% for class in classes %}
       <li>{{ class.title }}: {{ class.value }}</li>
       {% endfor %}
+    {% endif %}
     </ul>
   </p>
   <p>
