--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -29,6 +29,21 @@
       <input type="time" name="end_time" value="{{ meeting.end_time }}" required />
     </p>
     <input type="hidden" name="meeting_id" value="{{ meeting.id }}" />
+    {% for class in all_classes %}
+    <p>
+      {{ class }}: <br />
+      <select name="classes">
+        <option value="">(valitse)</option>
+      {% for option in all_classes[class] %}
+        {% if classes[class] == option %}
+        <option value="{{ class }}:{{ option }}" selected>{{ option }}</option>
+        {% else %}
+        <option value="{{ class }}:{{ option }}">{{ option }}</option>
+        {% endif %}
+      {% endfor %}
+      </select>
+    </p>
+    {% endfor %}
     <input type="submit" value="Päivitä tietoja" />
   </form>
 </body>
