--- a/templates/show_meeting.html
+++ b/templates/show_meeting.html
@@ -26,7 +26,7 @@
     <ul>
     {% if classes %}
       {% for class in classes %}
-      <li>{{ class.title }}: {{ class.value }}</li>
+      <li>{{ class.value }}</li>
       {% endfor %}
     {% endif %}
     </ul>
