Use layout on each page

--- a/templates/create.html
+++ b/templates/create.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Tunnus luotu</title>
-</head>
+{% block title %}Käsityökerho{% endblock %}
 
-<body>
-  <P>
-    Tunnus luotu
-  </P>
-  <p>
-    <a href="/">Etusivulle</a>
-  </p>
-</body>
-
-</html>
+{% block content %}
+<P>
+  Tunnus luotu
+</P>
+<p>
+  <a href="/">Etusivulle</a>
+</p>
+{% endblock %}
