--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Käyttäjä {{ user.username }}</title>
-</head>
+{% block title %}Käsityökerho{% endblock %}
 
-<body>
-  <h1>Käyttäjä {{ user.username }}</h1>
-  <p>
-    Käyttäjä on järjestänyt yhteensä {{ meetings | count }} tapaamista
-  </p>
-  <h2>Tapaamiset</h2>
-  <ul>
-    {% for meeting in meetings %}
-    <li><a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a></li>
-    {% endfor %}
-  </ul>
-  <p>
-    <a href="/">Takaisin</a>
-  </p>
-</body>
-
-</html>
+{% block content %}
+<h2>Käyttäjä {{ user.username }}</h2>
+<p>
+  Käyttäjä on järjestänyt yhteensä {{ meetings | count }} tapaamista
+</p>
+<h2>Tapaamiset</h2>
+<ul>
+  {% for meeting in meetings %}
+  <li><a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a></li>
+  {% endfor %}
+</ul>
+<p>
+  <a href="/">Takaisin</a>
+</p>
+{% endblock %}
