--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -1,51 +1,46 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Tapaamisen tietojen muokkaus</title>
-</head>
+{% block title %}Käsityökerho{% endblock %}
 
-<body>
-  <h1>Tapaamisen tietojen muokkaus</h1>
-  <form action="/update_meeting" method="post">
-    <p>
-      Aihe: <br />
-      <input type="text" name="topic" value="{{ meeting.topic }}" maxlenght="50" required />
-    </p>
-    <p>
-      Kuvaus: <br />
-      <textarea name="description" rows="8" cols="60" maxlenght="1000" required>{{ meeting.description }}</textarea>
-    </p>
-    <p>
-      Päivämäärä: <br />
-      <input type="date" name="date" value="{{ meeting.date }}" required />
-    </p>
-    <p>
-      Aloitusajankohta: <br />
-      <input type="time" name="start_time" value="{{ meeting.start_time }}" required />
-    </p>
-    <p>
-      Lopetusajankohta: <br />
-      <input type="time" name="end_time" value="{{ meeting.end_time }}" required />
-    </p>
-    <input type="hidden" name="meeting_id" value="{{ meeting.id }}" />
-    {% for class in all_classes %}
-    <p>
-      {{ class }}: <br />
-      <select name="classes">
-        <option value="">(valitse)</option>
-      {% for option in all_classes[class] %}
-        {% if classes[class] == option %}
-        <option value="{{ class }}:{{ option }}" selected>{{ option }}</option>
-        {% else %}
-        <option value="{{ class }}:{{ option }}">{{ option }}</option>
-        {% endif %}
-      {% endfor %}
-      </select>
-    </p>
+{% block content %}
+<h2>Tapaamisen tietojen muokkaus</h2>
+<form action="/update_meeting" method="post">
+  <p>
+    Aihe: <br />
+    <input type="text" name="topic" value="{{ meeting.topic }}" maxlenght="50" required />
+  </p>
+  <p>
+    Kuvaus: <br />
+    <textarea name="description" rows="8" cols="60" maxlenght="1000" required>{{ meeting.description }}</textarea>
+  </p>
+  <p>
+    Päivämäärä: <br />
+    <input type="date" name="date" value="{{ meeting.date }}" required />
+  </p>
+  <p>
+    Aloitusajankohta: <br />
+    <input type="time" name="start_time" value="{{ meeting.start_time }}" required />
+  </p>
+  <p>
+    Lopetusajankohta: <br />
+    <input type="time" name="end_time" value="{{ meeting.end_time }}" required />
+  </p>
+  <input type="hidden" name="meeting_id" value="{{ meeting.id }}" />
+  {% for class in all_classes %}
+  <p>
+    {{ class }}: <br />
+    <select name="classes">
+      <option value="">(valitse)</option>
+    {% for option in all_classes[class] %}
+      {% if classes[class] == option %}
+      <option value="{{ class }}:{{ option }}" selected>{{ option }}</option>
+      {% else %}
+      <option value="{{ class }}:{{ option }}">{{ option }}</option>
+      {% endif %}
     {% endfor %}
-    <input type="submit" value="Päivitä tietoja" />
-  </form>
-</body>
-
-</html>
+    </select>
+  </p>
+  {% endfor %}
+  <input type="submit" value="Päivitä tietoja" />
+</form>
+{% endblock %}
