--- a/templates/find_meeting.html
+++ b/templates/find_meeting.html
@@ -1,33 +1,28 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Etsi tapaaminen</title>
-</head>
+{% block title %}Käsityökerho{% endblock %}
 
-<body>
-  <h1>Etsi tapaaminen</h1>
+{% block content %}
+<h2>Etsi tapaaminen</h2>
 
-  <form action="/find_meeting" method="get">
-    <p>
-      Hakusana: <input type="text" name="query" value="{{ query }}">
-    </p>
-    <input type="submit" value="Etsi">
-  </form>
-
+<form action="/find_meeting" method="get">
   <p>
-    <a href="/">Takaisin</a>
+    Hakusana: <input type="text" name="query" value="{{ query }}">
   </p>
+  <input type="submit" value="Etsi">
+</form>
 
-  {% if query %}
-  <h2>Tulokset</h2>
+<p>
+  <a href="/">Etusivulle</a>
+</p>
 
-  <ul>
-    {% for meeting in results %}
-    <li><a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a></li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-</body>
+{% if query %}
+<h3>Tulokset</h3>
 
-</html>
+<ul>
+  {% for meeting in results %}
+  <li><a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
+{% endblock %}
