--- a/templates/register.html
+++ b/templates/register.html
@@ -1,26 +1,22 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Rekisteröinti</title>
-</head>
+{% block title %}Käsityökerho{% endblock %}
 
-<body>
-  <form action="/create" method="post">
-    <p>
-      Tunnus: <br />
-      <input type="text" name="username" required />
-    </p>
-    <p>
-      Salasana: <br />
-      <input type="password" name="password1" required />
-    </p>
-    <p>
-      Salasana uudestaan: <br />
-      <input type="password" name="password2" required />
-    </p>
-    <input type="submit" value="Luo tunnus" />
-  </form>
-</body>
-
-</html>
+{% block content %}
+<h2>Tunnuksen luominen</h2>
+<form action="/create" method="post">
+  <p>
+    Tunnus: <br />
+    <input type="text" name="username" required />
+  </p>
+  <p>
+    Salasana: <br />
+    <input type="password" name="password1" required />
+  </p>
+  <p>
+    Salasana uudestaan: <br />
+    <input type="password" name="password2" required />
+  </p>
+  <input type="submit" value="Luo tunnus" />
+</form>
+{% endblock %}
