--- a/templates/show_meeting.html
+++ b/templates/show_meeting.html
@@ -1,57 +1,52 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>{{ meeting.topic }}</title>
-</head>
+{% block title %}Käsityökerho{% endblock %}
 
-<body>
-  <h1>{{ meeting.topic }}</h1>   
-  {% if session.user_id == meeting.user_id %}
-  <p>
-    <a href="/edit_meeting/{{ meeting.id }}">Muokkaa</a>
-    <a href="/remove_meeting/{{ meeting.id }}">Poista</a>
-  </p>
+{% block content %}
+<h2>{{ meeting.topic }}</h2>
+{% if session.user_id == meeting.user_id %}
+<p>
+  <a href="/edit_meeting/{{ meeting.id }}">Muokkaa</a>
+  <a href="/remove_meeting/{{ meeting.id }}">Poista</a>
+</p>
+{% endif %}
+<p>
+  {{ meeting.description }}
+</p>
+<p>
+  {{ meeting.date }} klo {{ meeting.start_time }}-{{ meeting.end_time }}
+</p>
+<p>
+  Tapaamisen järjestäjä: <a href="/user/{{ meeting.user_id }}">{{ meeting.username }}</a>
+</p>
+<p>
+  <ul>
+  {% if classes %}
+    {% for class in classes %}
+    <li>{{ class.value }}</li>
+    {% endfor %}
   {% endif %}
-  <p>
-    {{ meeting.description }}
-  </p>
-  <p>
-    {{ meeting.date }} klo {{ meeting.start_time }}-{{ meeting.end_time }}
-  </p>
-  <p>
-    Tapaamisen järjestäjä: <a href="/user/{{ meeting.user_id }}">{{ meeting.username }}</a>
-  </p>
-  <p>
+  </ul>
+</p>
+<p>
+  {% if participants %}
+    Osallistujat
     <ul>
-    {% if classes %}
-      {% for class in classes %}
-      <li>{{ class.value }}</li>
+      {% for participant in participants %}
+      <li><a href="/user/{{ participant.user_id }}">{{ participant.username }}</a></li>
       {% endfor %}
-    {% endif %}
     </ul>
-  </p>
-  <p>
-    {% if participants %}
-      Osallistujat
-      <ul>
-        {% for participant in participants %}
-        <li><a href="/user/{{ participant.user_id }}">{{ participant.username }}</a></li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-  </p>
-  <form action="/participate" method="post">
-    <input type="hidden" name="meeting_id" value="{{ meeting.id }}">
-    <input type="submit" value="Osallistu" />
-  </form>
-  <form action="/cancel_participation" method="post">
-    <input type="hidden" name="meeting_id" value="{{ meeting.id }}">
-    <input type="submit" value="Peru osallistuminen" />
-  </form>
-  <p>
-    <a href="/">Etusivulle</a>
-  </p>
-</body>
-
-</html>
+  {% endif %}
+</p>
+<form action="/participate" method="post">
+  <input type="hidden" name="meeting_id" value="{{ meeting.id }}">
+  <input type="submit" value="Osallistu" />
+</form>
+<form action="/cancel_participation" method="post">
+  <input type="hidden" name="meeting_id" value="{{ meeting.id }}">
+  <input type="submit" value="Peru osallistuminen" />
+</form>
+<p>
+  <a href="/">Etusivulle</a>
+</p>
+{% endblock %}
