Use CSS and improve listings

--- a/templates/find_meeting.html
+++ b/templates/find_meeting.html
@@ -19,10 +19,10 @@
 {% if query %}
 <h3>Tulokset</h3>
 
-<ul>
-  {% for meeting in results %}
-  <li><a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a></li>
-  {% endfor %}
-</ul>
+{% for meeting in results %}
+<div>
+<a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a>
+</div>
+{% endfor %}
 {% endif %}
 {% endblock %}
