Improve meeting pages

--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -43,4 +43,7 @@
   {% endfor %}
   <input type="submit" value="Päivitä tietoja" />
 </form>
+<p>
+  <a href="/meeting/{{ meeting.id }}">Takaisin</a>
+</p>
 {% endblock %}
