--- a/templates/show_meeting.html
+++ b/templates/show_meeting.html
@@ -10,16 +10,15 @@
   <a href="/remove_meeting/{{ meeting.id }}">Poista</a>
 </p>
 {% endif %}
-<p>
-  {{ meeting.description }}
-</p>
-<p>
-  {{ meeting.date }} klo {{ meeting.start_time }}-{{ meeting.end_time }}
-</p>
-<p>
-  Tapaamisen järjestäjä: <a href="/user/{{ meeting.user_id }}">{{ meeting.username }}</a>
-</p>
-<p>
+<div>
+{{ meeting.description }}
+</div>
+<div>
+{{ meeting.date }} klo {{ meeting.start_time }}-{{ meeting.end_time }}
+</div>
+<div>
+Tapaamisen järjestäjä: <a href="/user/{{ meeting.user_id }}">{{ meeting.username }}</a>
+</div>
 {% if classes %}
   {% for class in classes %}
   <div>
@@ -27,10 +26,9 @@
   </div>
   {% endfor %}
 {% endif %}
-</p>
 <p>
   {% if participants %}
-    Osallistujat
+    <h3>Osallistujat</h3>
     {% for participant in participants %}
     <div>
     <a href="/user/{{ participant.user_id }}">{{ participant.username }}</a>
@@ -38,6 +36,7 @@
     {% endfor %}
   {% endif %}
 </p>
+{% if session.user_id %}
 <form action="/participate" method="post">
   <input type="hidden" name="meeting_id" value="{{ meeting.id }}">
   <input type="submit" value="Osallistu" />
@@ -46,6 +45,7 @@
   <input type="hidden" name="meeting_id" value="{{ meeting.id }}">
   <input type="submit" value="Peru osallistuminen" />
 </form>
+{% endif %}
 <p>
   <a href="/">Etusivulle</a>
 </p>
