--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,9 +9,9 @@
 <body>
   <h1>Käsityökerho</h1>
 
-  {% if session.username %}
+  {% if session.user_id %}
   <p>
-    Olet kirjautunut nimellä {{ session.username }}, id-numerosi on {{ session.user_id }}
+    Olet kirjautunut nimellä <a href="/user/{{ session.user_id }}">{{ session.username }}</a>
   </p>
   {% endif %}
 
