--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-  <h1>Käsityökerho</h1>
+  <div class="header">
+    <h1>Käsityökerho</h1>
+  </div>
 
   {% if session.user_id %}
   <p>
