--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -6,30 +6,30 @@
 <h2>Tapaamisen tietojen muokkaus</h2>
 <form action="/update_meeting" method="post">
   <p>
-    Aihe: <br />
-    <input type="text" name="topic" value="{{ meeting.topic }}" maxlenght="50" required />
+    <label for="topic">Aihe:</label> <br />
+    <input type="text" name="topic" id="topic" value="{{ meeting.topic }}" maxlenght="50" required />
   </p>
   <p>
-    Kuvaus: <br />
-    <textarea name="description" rows="8" cols="60" maxlenght="1000" required>{{ meeting.description }}</textarea>
+    <label for="description">Kuvaus:</label> <br />
+    <textarea name="description" id="description" rows="8" cols="60" maxlenght="1000" required>{{ meeting.description }}</textarea>
   </p>
   <p>
-    Päivämäärä: <br />
-    <input type="date" name="date" value="{{ meeting.date }}" required />
+    <label for="date">Päivämäärä:</label> <br />
+    <input type="date" name="date" id="date" value="{{ meeting.date }}" required />
   </p>
   <p>
-    Aloitusajankohta: <br />
-    <input type="time" name="start_time" value="{{ meeting.start_time }}" required />
+    <label for="start_time">Aloitusajankohta:</label> <br />
+    <input type="time" name="start_time" id="start_time" value="{{ meeting.start_time }}" required />
   </p>
   <p>
-    Lopetusajankohta: <br />
-    <input type="time" name="end_time" value="{{ meeting.end_time }}" required />
+    <label for="end_time">Lopetusajankohta:</label> <br />
+    <input type="time" name="end_time" id="end_time" value="{{ meeting.end_time }}" required />
   </p>
   <input type="hidden" name="meeting_id" value="{{ meeting.id }}" />
   {% for class in all_classes %}
   <p>
-    {{ class }}: <br />
-    <select name="classes">
+    <label for="class{{ class }}">{{ class }}:</label> <br />
+    <select name="classes" id="class{{ class }}">
       <option value="">(valitse)</option>
     {% for option in all_classes[class] %}
       {% if classes[class] == option %}
