--- a/templates/find_meeting.html
+++ b/templates/find_meeting.html
@@ -7,7 +7,8 @@
 
 <form action="/find_meeting" method="get">
   <p>
-    Hakusana: <input type="text" name="query" value="{{ query }}">
+    <label for="query">Hakusana:</label>
+    <input type="text" name="query" value="{{ query }}">
   </p>
   <input type="submit" value="Etsi">
 </form>
