--- a/templates/new_meeting.html
+++ b/templates/new_meeting.html
@@ -6,29 +6,29 @@
 <h2>Uusi tapaaminen</h2>
 <form action="/create_meeting" method="post">
   <p>
-    Aihe: <br />
-    <input type="text" name="topic" maxlength="50" required />
+    <label for="topic">Aihe:</label> <br />
+    <input type="text" name="topic" id="topic" maxlength="50" required />
   </p>
   <p>
-    Kuvaus: <br />
-    <textarea name="description" rows="8" cols="60" maxlength="1000" required></textarea>
+    <label for="description">Kuvaus:</label> <br />
+    <textarea name="description" id="description" rows="8" cols="60" maxlength="1000" required></textarea>
   </p>
   <p>
-    Päivämäärä: <br />
-    <input type="date" name="date" required />
+    <label for="date">Päivämäärä:</label> <br />
+    <input type="date" name="date" id="date" required />
   </p>
   <p>
-    Aloitusajankohta: <br />
-    <input type="time" name="start_time" required />
+    <label for="start_time">Aloitusajankohta:</label> <br />
+    <input type="time" name="start_time" id="start_time" required />
   </p>
   <p>
-    Lopetusajankohta: <br />
-    <input type="time" name="end_time" required />
+    <label for="end_time">Lopetusajankohta:</label> <br />
+    <input type="time" name="end_time" id="end_time" required />
   </p>
   {% for class in classes %}
   <p>
-    {{ class }}: <br />
-    <select name="classes">
+    <label for="class{{ class }}">{{ class }}:</label> <br />
+    <select name="classes" id="class{{ class }}">
       <option value="">(valitse)</option>
     {% for option in classes[class] %}
       <option value="{{ class }}:{{ option }}">{{ option }}</option>
