Add page distribution to front page

--- a/templates/edit_meeting.html
+++ b/templates/edit_meeting.html
@@ -11,7 +11,7 @@
   </p>
   <p>
     <label for="description">Kuvaus:</label> <br />
-    <textarea name="description" id="description" rows="8" cols="60" maxlenght="1000" required>{{ meeting.description }}</textarea>
+    <textarea name="description" id="description" rows="8" cols="60" maxlenght="1000">{{ meeting.description }}</textarea>
   </p>
   <p>
     <label for="date">Päivämäärä:</label> <br />
