--- a/templates/new_meeting.html
+++ b/templates/new_meeting.html
@@ -11,7 +11,7 @@
   </p>
   <p>
     <label for="description">Kuvaus:</label> <br />
-    <textarea name="description" id="description" rows="8" cols="60" maxlength="1000" required></textarea>
+    <textarea name="description" id="description" rows="8" cols="60" maxlength="1000"></textarea>
   </p>
   <p>
     <label for="date">Päivämäärä:</label> <br />
