--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,17 @@
 <h2>Tapaamiset</h2>
 
 
-{% for meeting in meetings %}
+{% for meeting in all_meetings %}
 <div class="meeting">
 <a href="/meeting/{{ meeting.id }}">{{ meeting.topic }}</a> <br />
 {{ meeting.date }} klo {{meeting.start_time }}-{{ meeting.end_time }} <br />
-Järjestäjä: <a href="/user/{{ meeting.user_id }}">{{ meeting.username }}</a> <br />
+Järjestäjä: {{ meeting.username }} <br />
 </div>
 {% endfor %}
+
+<p>
+  <a href="/{{ page - 1 }}">&lt;&lt;</a>
+  Sivu {{ page }}/{{ page_count }}
+  <a href="/{{ page + 1 }}">&gt;&gt;</a>
+</p>
 {% endblock %}
